# turboquant

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: diagnose_qwen.py  niah.py  perplexity.py  results.md
docs/: blog-zh.md  kv-cache-industry-landscape.md  kvtc-comparison.md
examples/: adaptive_layer_demo.py
tests/: conftest.py  test_attention.py  test_calibration.py  test_core.py  test_hf_integration.py  test_qjl_theorem2.py
turboquant/: __init__.py  bitpack.py  calibration.py  codebook.py  hf_integration.py  rotation.py  turboquant.py
workspace/research/: qwen-kv-quant-survey.md
